fix: prevent wrap of characteristics.

--- a/src/sass/pages/dev-support.scss
+++ b/src/sass/pages/dev-support.scss
@@ -434,6 +434,7 @@ body.dev-support {
                         grid-template-columns: 35% 35% 25%;
                         height: 154px;
                         padding-top: 13px;
+                        white-space: nowrap;
                     }
                 }
             }
@@ -486,6 +487,7 @@ body.dev-support {
                         grid-template-columns: 35% 35% 25%;
                         height: 154px;
                         padding-top: 13px;
+                        white-space: nowrap;
                     }
                 }
             }
